--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:site_name" content="christophbg.github.io">
     <meta property="og:url" content="https://christophbg.github.io/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://christophbg.github.io/resources/images/profile.png">
+    <meta property="og:image" content="https://christophbg.github.io/resources/sm_profile.png">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:creator" content="@CBrainberg">
 
