continued filling in my text

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="content-block center">
         <h2 id="main-title" class="title">Christoph Bamberg</h2>
         <img id="main-logo" src="resources/sm_profile.png" alt=" Christoph Bamberg profile picture">
-        <p id="main-paragraph">Greetings and welcome to my GitHub page, I'm Christoph!</p>
+        <p id="main-paragraph">Greetings and welcome to my GitHub page, I'm Christoph! <br> this is work in progress... </p>
       </div>
       
       <div class="content-block">
@@ -41,29 +41,25 @@
           <div class="column">
             <h2 class="section-title" id="main-experience">Experience</h2>
             <ul>
-              <li>HTML, CSS, JavaScript (5+ years, self-taught), jQuery, Lua</li>
-              <li><a href="https://help.forumotion.com/u88576">Customer Support @ Forumotion</a> (3 years, volunteer)</li>
-              <li>Graphic Design (5+ years, self-taught)</li>
+              <li> Data analysis in Python and R. </li>
+              <li> ...Research... </li>
+              <li> ...Teaching...</li>
             </ul>
           </div>
 
           <div class="column">
-            <h2 class="section-title" id="main-languages">Languages</h2>
+            <h2 class="section-title" id="skills">Skills</h2>
             <ul>
-              <li>English, US (Native)</li>
-              <li>Japanese (N4?, currently self-studying)</li>
+              <li>Python</li>
+              <li>R </li>
             </ul>
           </div>
 
           <div class="column">
             <h2 class="section-title" id="main-hobbies">Hobbies</h2>
             <ul>
-              <li>Studying Japanese</li>
-              <li>Gaming</li>
-              <li>Anime</li>
-              <li>Manga</li>
-              <li>Drawing</li>
-              <li>Programming</li>
+              <li>playing Jazz on the guitar, with friends</li>
+              <li> ... </li>
             </ul>
           </div>
         </div>
