--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="content-block center">
         <h2 id="main-title" class="title">Christoph Bamberg</h2>
         <img id="main-logo" src="resources/sm_profile.png" alt=" Christoph Bamberg profile picture">
-        <p id="main-paragraph">Greetings and welcome to my GitHub page, I'm Christoph! <br> this is work in progress... </p>
+        <p id="main-paragraph">Greetings and welcome to my GitHub page, I'm Christoph! this is work in progress... </p>
       </div>
       
       <div class="content-block">
