--- a/index.html
+++ b/index.html
@@ -41,24 +41,27 @@
           <div class="column">
             <h2 class="section-title" id="main-experience">Experience</h2>
             <ul>
-              <li> Data analysis in Python and R. </li>
-              <li> ...Research... </li>
-              <li> ...Teaching...</li>
+              <li> Scientific programming using Python and R.</li>
+              <li> Analysis of behavioural data, EEG data and various physiological measures. </li>
+              <li> Some teaching (e.g. as a tutor for logic and scientific methods)</li>
             </ul>
           </div>
 
           <div class="column">
             <h2 class="section-title" id="skills">Skills</h2>
             <ul>
-              <li>Python</li>
-              <li>R </li>
+              <li>Python: anything from programming experiments over data analysis to text-parsing </li>
+              <li>R: preferrably Bayesian statistics </li>
+              <li>SQL: work in progress </li>
             </ul>
           </div>
 
           <div class="column">
             <h2 class="section-title" id="main-hobbies">Hobbies</h2>
             <ul>
-              <li>playing Jazz on the guitar, with friends</li>
+              <li>Playing Jazz on the guitar with friends.</li>
+              <li>Hiking along the rivers of Germany.</li>
+              <li>Improving my freestyle swimming technique.</li>
               <li> ... </li>
             </ul>
           </div>
