--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       <div class="content-block">
         <div class="column-row">
           <div class="column">
-            <h2 class="section-title" id="publications_links">References</h2>
+            <h2 class="section-title" id="publications_peer_reviewed">References</h2>
             <ul>
-              <li><a href="https://sethclydesdale.github.io/genki-study-resources/lessons-3rd/">Genki Study Resources</a><br>A website that offers resources for practicing what is taught in the Genki Japanese textbooks.</li>
+              <li><a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=v_ap_E0AAAAJ&citation_for_view=v_ap_E0AAAAJ:UebtZRa9Y70C">Bamberg, Flasbeck, Diop, Brüne (2021) </a> Ecology of cooperation: The influence of fasting and satiety on interpersonal trust. Social Neuroscience </li>
               <li><a href="https://sethclydesdale.github.io/tobira-study-resources/">Tobira Study Resources</a><br>A website that offers resources for practicing what is taught in Tobira: Gateway to Advanced Japanese.</li>
               <li><a href="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/">Hajimari no Kiseki Jisho</a><br>A Japanese-English dictionary/quick reference for various terms and menus in Hajimari no Kiseki.</li>
               <li><a href="https://sethclydesdale.github.io/tio-plato-is-the-best/">Tio Plato is the Best</a><br>A small webpage/slideshow dedicated to my favorite character, Tio Plato.</li>
