--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div class="column">
             <h2 class="section-title" id="publications_peer_reviewed">References</h2>
             <ul>
-              <li><a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=v_ap_E0AAAAJ&citation_for_view=v_ap_E0AAAAJ:UebtZRa9Y70C">Bamberg, Flasbeck, Diop, Brüne (2021) </a> Ecology of cooperation: The influence of fasting and satiety on interpersonal trust. Social Neuroscience </li>
+              <li><a href="https://www.tandfonline.com/doi/abs/10.1080/17470919.2021.1876758/">Bamberg, Flasbeck, Diop, Brüne (2021) </a> Ecology of cooperation: The influence of fasting and satiety on interpersonal trust. Social Neuroscience </li>
               <li><a href="https://sethclydesdale.github.io/tobira-study-resources/">Tobira Study Resources</a><br>A website that offers resources for practicing what is taught in Tobira: Gateway to Advanced Japanese.</li>
               <li><a href="https://sethclydesdale.github.io/hajimari-no-kiseki-jisho/">Hajimari no Kiseki Jisho</a><br>A Japanese-English dictionary/quick reference for various terms and menus in Hajimari no Kiseki.</li>
               <li><a href="https://sethclydesdale.github.io/tio-plato-is-the-best/">Tio Plato is the Best</a><br>A small webpage/slideshow dedicated to my favorite character, Tio Plato.</li>
