--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
             <h2 class="section-title" id="publications_peer_reviewed">References</h2>
             <ul>
               <li><a href="https://www.tandfonline.com/doi/abs/10.1080/17470919.2021.1876758/">Bamberg, Flasbeck, Diop, Brüne (2021). </a> Ecology of cooperation: The influence of fasting and satiety on interpersonal trust. Social Neuroscience </li>
-              <li><a href="https://journals.sagepub.com/doi/abs/10.1177/15500594211000925/">Bamberg, Flasbeck, Juckel, Brüne (2021).</a> Loudness dependence of auditory-evoked potentials, a marker of central serotonergic activity, is affected by fasting and selective uptake of food
-. Clinical EEG and Neuroscience </li>
-              <li><a href="https://doi.org/10.3389/fnins.2021.622428/">Bamberg, Flasbeck, Brüne (2021). </a> Short-Term Fasting and Ingestion of Caloric Drinks Affect Heartbeat-Evoked Potentials and Autonomic Nervous System Activity in Males. Frontiers in Neuroscience</li>
-              <li><a href="https://sethclydesdale.github.io/tio-plato-is-the-best/">Tio Plato is the Best</a><br>A small webpage/slideshow dedicated to my favorite character, Tio Plato.</li>
-             </ul>
+              <li><a href="https://journals.sagepub.com/doi/abs/10.1177/15500594211000925/">Bamberg, Flasbeck, Juckel, Brüne (2021). </a> Loudness dependence of auditory-evoked potentials, a marker of central serotonergic activity, is affected by fasting and selective uptake of food
+. Clinical EEG and Neuroscience. </li>
+              <li><a href="https://doi.org/10.3389/fnins.2021.622428/">Bamberg, Flasbeck, Brüne (2021). </a> Short-Term Fasting and Ingestion of Caloric Drinks Affect Heartbeat-Evoked Potentials and Autonomic Nervous System Activity in Males. Frontiers in Neuroscience. </li>
+            </ul>
           </div>
           
           <div class="column">
