--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </ul>
       
       <ul class="footer-right">
-        <li>Created by <a href="https://github.com/SethClydesdale">Seth Clydesdale</a></li>
+        <li>Created by <a href="https://github.com/CBrainberg">Christoph Bamberg</a></li>
       </ul>
     </footer>
   
