--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
       </div>
     
     <footer class="clear">
+            <ul class="footer-left">
+        <li><a href="./">Home</a></li>
+        <li><a href="privacy/">Privacy</a></li>
+      </ul>
+      
       <ul class="footer-right">
         <li>Created by <a href="https://github.com/CBrainberg">Christoph Bamberg</a></li>
       </ul>
