--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     
     <footer class="clear">
       <ul class="footer-right">
-        <li>Created by <a href="https://github.com/CBrainberg">Christoph Bamberg</a></li>
+        <li>Created by <a href="https://github.com/christophbg">Christoph Bamberg</a></li>
       </ul>
     </footer>
   
