--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
       </div>
     
     <footer class="clear">
+      
+      <ul class="footer-left"> 
+        <li> Copyright 2022, Christoph Bamberg </li>
+      </ul>
       <ul class="footer-right">
         <li>Created by <a href="https://github.com/christophbg">Christoph Bamberg</a></li>
       </ul>
