--- a/index.html
+++ b/index.html
@@ -98,16 +98,16 @@
           <div class="column">
             <h2 class="section-title" id="preregistrations">Preregistrations of current projects</h2>
             <ul>
-              <li><a href="https://osf.io/abgf2"> Bamberg & Moreau. (2022) </a> A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance.</li>
-              <li><a href="https://link/ep5ua"> Bamberg, Hagelweide, Üngör, Weigelt (2021) </a> Flexibility and Extinction in Teenagers.</li>
+              <li><a href="https://osf.io/abgf2/"> Bamberg & Moreau. (2022) </a> A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance.</li>
+              <li><a href="https://link/ep5ua/"> Bamberg, Hagelweide, Üngör, Weigelt (2021) </a> Flexibility and Extinction in Teenagers.</li>
             </ul>
           </div>
           
           <div class="column">
             <h2 class="section-title" id="presentations">Presentations</h2>
             <ul>
-              <li>Presentation 1.</li>
-              <li>Presentation 2.</li>
+              <li><a href="https://www.cbs.mpg.de/1921673/a15_bamberg.pdf/"> Poster: A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance. Mind Brain Body Symposium 2022. </a> </li>
+              <li>Talk. Developmental trajectories of flexible feedback processing and probabilistic reversal learning from late childhood to adulthood. TeaP 2021.</li>
             </ul>
           </div>
         </div> 
