--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       
       <div class="content-block center">
         <h2 id="publications" class="title center">Publications</h2>
-        <p>Below you'll find a list of my scientific publications soon.</p>
+        <p>Below you can find a selection of my scientific publications and presentations.</p>
       </div>
         
       <div class="content-block">
@@ -107,7 +107,9 @@
             <h2 class="section-title" id="presentations">Presentations</h2>
             <ul>
               <li><a href="https://www.cbs.mpg.de/1921673/a15_bamberg.pdf/"> Poster: A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance. Mind Brain Body Symposium 2022. </a> </li>
-              <li>Talk. Developmental trajectories of flexible feedback processing and probabilistic reversal learning from late childhood to adulthood. TeaP 2021.</li>
+              <li> Talk: Developmental trajectories of flexible feedback processing and probabilistic reversal learning from late childhood to adulthood. TeaP 2021.</li>
+              <li> Poster: Fasting and nutrition affect the Loudness Dependence of Acoustic Evoked Potentials. Live MEEG 2020.</li>
+              <li> Trust is disrupted by physical needs and is payed when it seems worth it. 16th annual conference of the Italian Association for Cognitive Science AISC, Rome, 2019 </li>
             </ul>
           </div>
         </div> 
