--- a/index.html
+++ b/index.html
@@ -70,15 +70,13 @@
           </div>
         </div>
         
-        <div class="column-row">
-          <div class="column">
-            <h2 class="section-title" id="main-contact">Links/Contact</h2>
+        <div class="content-block center">
+            <h2 id="main-contact">Links/Contact</h2>
             <ul>
               <li>Twitter: <a href="https://twitter.com/CBrainberg">@CBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
-              <li>LinkedIN: <a href="https://www.linkedin.com/in/christoph-bamberg-2249a9a9/">Christoph Bamberg</a></li>
+              <li>Linkedin: <a href="https://www.linkedin.com/in/christoph-bamberg-2249a9a9/">Christoph Bamberg</a></li>
             </ul>
-          </div>
         </div>
       
       <div class="content-block center">
@@ -112,7 +110,7 @@
               <li><a href="https://www.cbs.mpg.de/1921673/a15_bamberg.pdf/"> Poster: </a> A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance. Mind Brain Body Symposium 2022. </li>
               <li> Talk: Developmental trajectories of flexible feedback processing and probabilistic reversal learning from late childhood to adulthood. TeaP 2021.</li>
               <li> Poster: Fasting and nutrition affect the Loudness Dependence of Acoustic Evoked Potentials. Live MEEG 2020.</li>
-              <li> Trust is disrupted by physical needs and is payed when it seems worth it. 16th annual conference of the Italian Association for Cognitive Science AISC, Rome, 2019 </li>
+              <li> Talk: Trust is disrupted by physical needs and is payed when it seems worth it. 16th annual conference of the Italian Association for Cognitive Science AISC, Rome, 2019 </li>
             </ul>
           </div>
         </div> 
