--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         
         <div class="column-row">
           <div class="column">
-            <h2 class="section-title" id="Links & Contact">Experience</h2>
+            <h2 class="section-title" id="links_contact">Links & Contact</h2>
             <ul>
               <li>Twitter: <a href="https://twitter.com/CBrainberg">@CBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
