--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <!-- trying to center the next column by having an empty one to the side of it-->
         <div class="column-row">
           <div class="column">
+            <h2 class="section-title" id="empty"></h2>
+            <ul>
+            </ul>
           </div>
         </div>
         
