--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
           <div class="column">
             <h2 class="section-title" id="main-hobbies">Hobbies</h2>
             <ul>
-              <li>Playing Jazz on the guitar with friends.</li>
+              <li>Playing Jazz guitar, organising jam-sessions.</li>
               <li>Hiking along the rivers of Germany.</li>
               <li>Improving my freestyle swimming technique.</li>
-              <li> ... </li>
             </ul>
           </div>
         </div>
