--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <div class="column">
             <h2 class="section-title" id="main-hobbies">Hobbies</h2>
             <ul>
-              <li>Playing Jazz guitar, organising jam-sessions.</li>
-              <li>Hiking along the rivers of Germany.</li>
-              <li>Improving my freestyle swimming technique.</li>
+              <li>Playing Jazz guitar, organising jam-sessions</li>
+              <li>Hiking along the rivers of Germany</li>
+              <li>Improving my freestyle swimming technique</li>
             </ul>
           </div>
         </div>
@@ -130,7 +130,7 @@
     <footer class="clear">
       
       <ul class="footer-left"> 
-        <li> Copyright 2022, Christoph Bamberg </li>
+        <li>   </li>
       </ul>
       <ul class="footer-right">
         <li>Created by <a href="https://github.com/christophbg">Christoph Bamberg</a></li>
