--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
               <li>Twitter: <a href="https://twitter.com/CBrainberg">@CBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
               <li>Linkedin: <a href="https://www.linkedin.com/in/christoph-bamberg-2249a9a9/">Christoph Bamberg</a></li>
+              <li> <a href="username.github.io/folder/document.pdf" target="_blank">My CV.</a></li>
             </ul>
           </div>
         </div>
