--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
         
         <div class="column-row">
           <div class="column">
-            <h2 class="section-title" id="links_contact">Links & Contact</h2>
+            <h2 class="section-title" id="links_contact">CV & Contact</h2>
             <ul>
+              <li> <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">My CV.</a></li>
               <li>Twitter: <a href="https://twitter.com/CBrainberg">@CBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
               <li>Linkedin: <a href="https://www.linkedin.com/in/christoph-bamberg-2249a9a9/">Christoph Bamberg</a></li>
-              <li> <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">My CV.</a></li>
             </ul>
           </div>
         </div>
