--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
           <div class="column">
             <h2 class="section-title" id="links_contact">CV & Contact</h2>
             <ul>
+              <!-- links to CV in github: -->
               <li> <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">My CV.</a></li>
               <li>Twitter: <a href="https://twitter.com/CBrainberg">@CBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
