--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="content-block center">
         <h2 id="main-title" class="title">Christoph Bamberg</h2>
         <img id="main-logo" src="resources/sm_profile.png" alt=" Christoph Bamberg profile picture">
-        <p id="main-paragraph">Greetings and welcome to my GitHub page, I'm Christoph. <br> ...This is still work in progress... </p>
+        <p id="main-paragraph">Greetings and welcome to my  webpage, I'm Christoph. <br> You can find an overview of my skills and experience here. <br> Please refer to my CV for details. </p>
       </div>
       
       <div class="content-block">
