--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
           <div class="column">
             <h2 class="section-title" id="skills">Skills</h2>
             <ul>
-              <li>Python: anything from programming experiments over data analysis to text-parsing </li>
+              <li>Python: anything from programming experiments over data analysis to text-parsing, mostly using <a href="http://ude.my/UC-f7b8e7a5-d36f-4989-b28f-53b5d125cf68">functional programming</a></li>
               <li>R: preferrably Bayesian statistics </li>
-              <li>SQL: work in progress </li>
+              <li>SQL: <a href="http://ude.my/UC-4ae4cb16-5456-4bd7-9e1c-70238c417aa9">for business data analystics</a></li>
             </ul>
           </div>
 
