Updated, also new profile pic

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://christophbg.github.io/resources/sm_profile.png">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:creator" content="@CBrainberg">
+    <meta name="twitter:creator" content="@ChrisBrainberg">
 
     <link rel="stylesheet" href="resources/stylesheet.min.css">
   </head>
@@ -35,7 +35,7 @@
     <div id="content">
       <div class="content-block center">
         <h2 id="main-title" class="title">Christoph Bamberg</h2>
-        <img id="main-logo" src="resources/sm_profile.png" alt=" Christoph Bamberg profile picture">
+        <img id="main-logo" src="resources/sm_profile2.png" alt=" Christoph Bamberg profile picture">
         <p id="main-paragraph">Greetings and welcome to my  webpage, I'm Christoph. <br> You can find an overview of my skills and experience here. <br> Please refer to my CV for details. </p>
       </div>
       
@@ -63,7 +63,7 @@
             <h2 class="section-title" id="main-hobbies">Hobbies</h2>
             <ul>
               <li>Playing Jazz guitar, organising jam-sessions</li>
-              <li>Hiking along the rivers of Germany</li>
+              <li>Hiking along the rivers of Germany and mountains of Austria</li>
               <li>Improving my freestyle swimming technique</li>
             </ul>
           </div>
@@ -83,7 +83,7 @@
             <ul>
               <!-- links to CV in github: -->
               <li> <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">My CV.</a></li>
-              <li>Twitter: <a href="https://twitter.com/CBrainberg">@CBrainberg</a></li>
+              <li>Twitter: <a href="https://twitter.com/ChrisBrainberg">@ChrisBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
               <li>Linkedin: <a href="https://www.linkedin.com/in/christoph-bamberg-2249a9a9/">Christoph Bamberg</a></li>
             </ul>
@@ -110,6 +110,7 @@
           <div class="column">
             <h2 class="section-title" id="preregistrations">Preregistrations of current projects</h2>
             <ul>
+              <li><a href="https://osf.io/qm3wr/"> Bamberg & Roefs. (2022) </a> The Relationship between Eating and Concentration.</li>
               <li><a href="https://osf.io/abgf2/"> Bamberg & Moreau. (2022) </a> A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance.</li>
               <li><a href="https://link/ep5ua/"> Bamberg, Hagelweide, Üngör, Weigelt (2021) </a> Flexibility and Extinction in Teenagers.</li>
             </ul>
