added #hide me for Mastodon link

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <!-- links to CV in github: -->
               <li> <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">My CV.</a></li>
               <li>Mastodon: <a href="https://fediscience.org/web/@ChristophB">@ChristophB@fediscience.org</a></li>
-              <a rel="me" href="https://fediscience.org/@ChristophB">Mastodon</a>
+             <a id="hide-me" rel="me" href="https://fediscience.org/@ChristophB">Mastodon</a> 
               <li>Twitter: <a href="https://twitter.com/ChrisBrainberg">@ChrisBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
               <li>Linkedin: <a href="https://www.linkedin.com/in/christoph-bamberg-2249a9a9/">Christoph Bamberg</a></li>
@@ -145,6 +145,11 @@
   
     <script src="resources/javascript.min.js"></script>
   </body>
+        
+        #hide-me {
+    display: none;
+}
+
 </html>
 
         
