added SAMBA Poster

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           <div class="column">
             <h2 class="section-title" id="presentations">Presentations</h2>
             <ul>
+              <li> Poster: Cognitive Performance is not Worse When Fasted: A Preregistered Meta-Analysis. SAMBA, Salzburg 2022. <i>Received Poster Prize.</i> </li>
               <li><a href="https://www.cbs.mpg.de/1921673/a15_bamberg.pdf/"> Poster: </a> A Meta-Analysis of the Effects of Temporary Calorie Restriction on Cognitive Performance. Mind Brain Body Symposium 2022. </li>
               <li> Talk: Developmental trajectories of flexible feedback processing and probabilistic reversal learning from late childhood to adulthood. TeaP 2021.</li>
               <li> Poster: Fasting and nutrition affect the Loudness Dependence of Acoustic Evoked Potentials. Live MEEG 2020.</li>
