changed location of Mastodon

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
             <ul>
               <!-- links to CV in github: -->
               <li> <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">My CV.</a></li>
-              <li>Mastodon: <a href="https://fediscience.org/web/@ChristophB">@ChristophB@fediscience.org</a></li>
               <a id="hide-me" rel="me" href="https://fediscience.org/@ChristophB">Mastodon</a> 
               <li>Twitter: <a href="https://twitter.com/ChrisBrainberg">@ChrisBrainberg</a></li>
               <li>GitHub: <a href="https://github.com/ChristophBg">ChristophBg</a></li>
@@ -150,14 +149,18 @@
       </ul>
       <ul class="footer-right">
         <li>Created by <a href="https://github.com/christophbg">Christoph Bamberg</a></li>
+        <li>Mastodon: <a href="https://fediscience.org/web/@ChristophB">@ChristophB@fediscience.org</a></li>
       </ul>
     </footer>
   
     <script src="resources/javascript.min.js"></script>
   </body>
         
+        <!-- should be possible to hide Mastodon tag for verification by adding this and specifying this in the styles sheet but doesn't work
+              the code below is actually displayed on the website instead
         #hide-me {
     display: none;
+            -->
 }
 
 </html>
