--- a/index.html
+++ b/index.html
@@ -71,12 +71,13 @@
         </div>
         
       <div class="content-block">
-        <!-- trying to center the next column by having an empty one to the side of it-->
+        <!-- trying to center the next column by having an empty one to the side of it
         <div class="column-row">
           <div class="column">
             <ul>
             </ul>
         </div>
+        -->
         
         <div class="column-row">
           <div class="column">
