--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
         <li>   </li>
       </ul>
       <ul class="footer-right">
-        <li>Created by <a href="https://github.com/christophbg">Christoph Bamberg</a></li>
-        <a id="hide-me" rel="me" href="https://fediscience.org/@ChristophB">Mastodon</a> 
+        <li>Created by <a href="https://github.com/christophbg">Christoph Bamberg </a></li>
+        <a id="hide-me" rel="me" href="https://fediscience.org/@ChristophB">contact me on Mastodon</a> 
       </ul>
     </footer>
   
