--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <div class="column">
               <h2 class="section-title" id="publications">Scientific Publications</h2>
               <ul>
+                <li><a href="https://scholar.google.at/citations?user=v_ap_E0AAAAJ&hl=en">Google Scholar Profile</a> Find the most up to date list here!</li>
                 <li><a href="https://www.tandfonline.com/doi/abs/10.1080/17470919.2021.1876758/">Bamberg, Flasbeck, Diop, Brüne (2021).</a> Ecology of cooperation: The influence of fasting and satiety on interpersonal trust. Social Neuroscience.</li>
                 <li><a href="https://journals.sagepub.com/doi/abs/10.1177/15500594211000925/">Bamberg, Flasbeck, Juckel, Brüne (2021).</a> Loudness dependence of auditory-evoked potentials, a marker of central serotonergic activity, is affected by fasting and selective uptake of food. Clinical EEG and Neuroscience.</li>
                 <li><a href="https://doi.org/10.3389/fnins.2021.622428">Flasbeck, Bamberg, Brüne (2021).</a> Short-Term Fasting and Ingestion of Caloric Drinks Affect Heartbeat-Evoked Potentials and Autonomic Nervous System Activity in Males. Frontiers in Neuroscience.</li>
