--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <div class="column">
               <h2 class="section-title" id="publications"> Publications</h2>
               <ul>
-                <li><a href="https://orcid.org/0000-0002-4875-9943"> ORCiD profile</a> A list of my publications</li>
-                <li><a href="https://osf.io/by5su/">OSF profile</a> My ongoing projects</li>
-                <li><a href="https://doi.org/10.1016/j.appet.2024.107528"> Most recent publication</a> Social impediments to meat-eaters adherence to critical calls for a meat-free diet...</li>
+                <li><a href="https://orcid.org/0000-0002-4875-9943"> ORCiD profile:</a> A list of my publications</li>
+                <li><a href="https://osf.io/by5su/">OSF profile:</a> My ongoing projects</li>
+                <li><a href="https://doi.org/10.1016/j.appet.2024.107528"> Most recent publication: </a> Social impediments to meat-eaters adherence to critical calls for a meat-free diet...</li>
               </ul>
             </div>
             
