--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li><a href="https://orcid.org/0000-0002-4875-9943"> ORCiD profile:</a> A list of my publications</li>
                 <li><a href="https://osf.io/by5su/">OSF profile:</a> My ongoing projects</li>
-                <li><a href="https://doi.org/10.1016/j.appet.2024.107528"> Most recent publication: </a> Social impediments to meat-eaters adherence to critical calls for a meat-free diet...</li>
+                <li><a href="https://doi.org/10.1016/j.appet.2024.107823"> Most recent publication: </a> The impact of dietary claims on behaviour: Expectations qualify how actual satiety affects cognitive performance.</li>
               </ul>
             </div>
             
