--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <h2 class="section-title" id="Blog">Blog</h2>
             <ul>
               <li>New! I will try to collect some analyses and methods here that I found helpful.</li>
+              <li><a href="https://christophbg.github.io/resources/dag_bayes_ema.html" target="_blank">A guide for DAGs and Bayes with EMA data: </a> I go through a workflow combining Directed Acyclical Graphs with Bayesian analysis for Ecological Momentary Assessment data.</li>
               <li><a href="https://christophbg.github.io/resources/MLCorr_blog_post.html" target="_blank">A guide for multi-level correlation in R using STAN: </a> I use simulated nested data to show the benefit of multi-level correlations and how these can be written in STAN.</li>
               <li><a href="https://christophbg.github.io/resources/DAG_and_Generative_Model_EatExp.pdf" target="_blank">DAG & Generative model.</a> I made a Directed Acyclical Graph and wrote a generative model for a preregistration. <br>I later used these models to simulate data from and hope that the workflow might be interesting for others too. <br> Find the preregistration here: <a href="https://osf.io/9rcnk/"> osf.io</a></li>
               <li></li>
