--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <div id="content">
       <div class="content-block center">
-        <h2 id="main-title" class="title">Christoph Bamberg</h2>
+        <h2 id="main-title" class="title">Christoph Bamberg, Dr.rer.nat.</h2>
         <img id="main-logo" src="resources/sm_profile2.png" alt="Christoph Bamberg profile picture">
         <p id="main-paragraph">Greetings and welcome to my webpage, I'm Christoph. <br> You can find an overview of my skills and experience here. <br> Please refer to <a href="https://christophbg.github.io/resources/Christoph_Bamberg_CV_vergithub.pdf" target="_blank">my CV</a> for details. </p>
       </div>
