--- a/index.html
+++ b/index.html
@@ -56,11 +56,24 @@
               <ul>
                 <li>Wrote a column for <a href="https://www.spektrum.de/inhaltsverzeichnis/musikalitaet-was-unser-gespuer-fuer-klaenge-praegt-gehirn-und-geist-5-2024/2199930">"Spektrum der Wissenschaft"</a>, the German Scientific American on breakfast, Intermittent Fasting and concentration.</li>
                 <li><a href="https://www.in-mind.org/users/christoph-bamberg">In Mind Blog articles.</a> Wrote several blog articles on fasting, eating breakfast and cognition. (also available in <a href="https://de.in-mind.org/users/christoph-bamberg">German</a>).</li>
-                <li><a href="https://pintofscience.at/team/">Pint of Science Salzburg 2025.</a> Co-organising the Pint of Science Festival in Salzburg in 2023, 2024, 2025.</li>
+                <li><a href="https://pintofscience.at/team/Salzburg">Pint of Science Salzburg 2025.</a> Co-organising the Pint of Science Festival in Salzburg in 2023, 2024, 2025.</li>
                 <li>Feel free to contact me to commission popular science articles and talks!</li>
               </ul>
             </div>
           </div>
+
+
+      <div class="content-block">
+        <h2 class="section-title" id="Blog">Blog</h2>
+        <div class="column">
+          <ul>
+            <li><a href="https://christophbg.github.io/resources/melsm_ema.html" target="_blank">Mixed Effects Location Scale Models for EMA: </a> I showcase MELSM for EMA data, how to extract and plot the posteriors for random and fixed effects.</li>
+            <li><a href="https://christophbg.github.io/resources/dag_bayes_ema.html" target="_blank">A guide for DAGs and Bayes with EMA data: </a> I go through a workflow combining Directed Acyclical Graphs with Bayesian analysis for Ecological Momentary Assessment data.</li>
+            <li><a href="https://christophbg.github.io/resources/MLCorr_blog_post.html" target="_blank">A guide for multi-level correlation in R using STAN: </a> I use simulated nested data to show the benefit of multi-level correlations and how these can be written in STAN.</li>
+            <li><a href="https://christophbg.github.io/resources/DAG_and_Generative_Model_EatExp.pdf" target="_blank">DAG & Generative model.</a> I made a Directed Acyclical Graph and wrote a generative model for a preregistration. <br>I later used these models to simulate data from and hope that the workflow might be interesting for others too. <br> Find the preregistration here: <a href="https://osf.io/9rcnk/"> osf.io</a></li>
+            <li></li>
+          </ul>
+        </div>
         
         <div class="content-block">
         <div class="column-row">
@@ -88,20 +101,6 @@
               <li>Playing Jazz guitar, organising jam-sessions.</li>
               <li>Hiking along the rivers of Germany and mountains of Austria.</li>
               <li>Improving my freestyle swimming technique.</li>
-            </ul>
-          </div>
-        </div>
-        
-      <div class="content-block">
-        <div class="column-row">
-          <div class="column">
-            <h2 class="section-title" id="Blog">Blog</h2>
-            <ul>
-              <li><a href="https://christophbg.github.io/resources/melsm_ema.html" target="_blank">Mixed Effects Location Scale Models for EMA: </a> I showcase MELSM for EMA data, how to extract and plot the posteriors for random and fixed effects.</li>
-              <li><a href="https://christophbg.github.io/resources/dag_bayes_ema.html" target="_blank">A guide for DAGs and Bayes with EMA data: </a> I go through a workflow combining Directed Acyclical Graphs with Bayesian analysis for Ecological Momentary Assessment data.</li>
-              <li><a href="https://christophbg.github.io/resources/MLCorr_blog_post.html" target="_blank">A guide for multi-level correlation in R using STAN: </a> I use simulated nested data to show the benefit of multi-level correlations and how these can be written in STAN.</li>
-              <li><a href="https://christophbg.github.io/resources/DAG_and_Generative_Model_EatExp.pdf" target="_blank">DAG & Generative model.</a> I made a Directed Acyclical Graph and wrote a generative model for a preregistration. <br>I later used these models to simulate data from and hope that the workflow might be interesting for others too. <br> Find the preregistration here: <a href="https://osf.io/9rcnk/"> osf.io</a></li>
-              <li></li>
             </ul>
           </div>
         </div>
