--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
             <div class="column">
               <h2 class="section-title" id="scientific-outreach">Scientific Outreach</h2>
               <ul>
+                 <li>Co-hosting podcast <a href="https://cfm.opens.science/define-and-conquer-podcast/">Define and Conquer</a>: Theory, concept, measurement discussions for health psychologists. Available on Apple Pdocasts and Spotify.</li>
+                <li>Podcast guest on <a href="https://deref-gmx.net/mail/client/2vJOTBs6qn0/dereferrer/?redirectUrl=https%3A%2F%2Fplayer.captivate.fm%2Fepisode%2F76cbcdbe-171f-4e60-8dc9-e221ac025c58">Learning Bayesian Statistics</a>: Bayes, fasting, health psychology.</li>
                 <li>Wrote a column for <a href="https://www.spektrum.de/inhaltsverzeichnis/musikalitaet-was-unser-gespuer-fuer-klaenge-praegt-gehirn-und-geist-5-2024/2199930">"Spektrum der Wissenschaft"</a>, the German Scientific American on breakfast, Intermittent Fasting and concentration.</li>
                 <li><a href="https://www.in-mind.org/users/christoph-bamberg">In Mind Blog articles.</a> Wrote several blog articles on fasting, eating breakfast and cognition. (also available in <a href="https://de.in-mind.org/users/christoph-bamberg">German</a>).</li>
                 <li><a href="https://pintofscience.at/team/Salzburg">Pint of Science Salzburg 2025.</a> Co-organising the Pint of Science Festival in Salzburg in 2023, 2024, 2025.</li>
