--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
           <div class="column">
             <ul>
               <li><a href="https://christophbg.github.io/resources/dag_bayes_ema.html" target="_blank">A guide for DAGs and Bayes with EMA data: </a> I go through a workflow combining Directed Acyclical Graphs with Bayesian analysis for Ecological Momentary Assessment data.</li>
-              <li><a href="https://christophbg.github.io/resources/MLCorr_blog_post.html" target="_blank">A guide for multi-level correlation in R using STAN: </a> I use simulated nested data to show the benefit of multi-level correlations and how these can be written in STAN.</li>
+               <li><a href="https://christophbg.github.io/resources/MLCorr_blog_post.html" target="_blank">A guide for multi-level correlation in R using STAN: </a> I use simulated nested data to show the benefit of multi-level correlations and how these can be written in STAN.</li>
+              <li>Check out the podcast I co-host for discussions about theories, concepts, causality, measurement and more (see above)!.</li>
             </ul>
           </div>  
         </div>
